= 2.2.10 = *	Moved settings to appearance menu *	Changed min user level to capilbilty 'manage_options' *	Fixed menu showing in wordpress 3.0 *	Added %USERID% for links *	Fixed white space bug for link options
git-svn-id: https://plugins.svn.wordpress.org/sidebar-login/trunk@241948 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
 .widget_wp_sidebarlogin .avatar_container, #sidebar-login .avatar_container {
 	float:left;
 }
+.widget_wp_sidebarlogin ul {
+	list-style: none outside !important;
+}
 .widget_wp_sidebarlogin .avatar_container img, #sidebar-login .avatar_container img {
 	padding: 3px;
 	border: 1px solid #ddd;
